--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   },
   "homepage": "https://github.com/osawa-koki/trying-oauth-in-action-code-ch-3-ex-1#readme",
   "scripts": {
-    "build": "esbuild ./src/index.ts --bundle --outfile=./dist/index.js --minify --sourcemap --platform=node --target=es2020",
-    "start": "node ./dist/index.js",
-    "dev": "node -r esbuild-register ./src/index.ts",
+    "build": "esbuild ./src/*.ts --bundle --outdir=./dist/ --minify --sourcemap --platform=node --target=es2020",
+    "start:client": "node ./dist/client.js",
+    "dev:client": "node -r esbuild-register ./src/client.ts",
     "lint": "eslint ./src/**/*.ts",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "esbuild": "^0.24.2"
+    "consolidate": "^1.0.4",
+    "esbuild": "^0.24.2",
+    "express": "^4.21.2",
+    "qs": "^6.14.0",
+    "randomstring": "^1.3.1",
+    "sync-request": "^6.1.0",
+    "underscore": "^1.13.7",
+    "underscore.string": "^3.3.6",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
