--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@types/consolidate": "^0.14.4",
+    "@types/express": "^5.0.0",
+    "@types/randomstring": "^1.3.0",
+    "@types/underscore": "^1.13.0",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
