--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+database.nosql
+
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,node,visualstudiocode,vim
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,node,visualstudiocode,vim
 
