--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "scripts": {
     "build": "esbuild ./src/*.ts --bundle --outdir=./dist/ --minify --sourcemap --platform=node --target=es2020",
     "start:client": "node ./dist/client.js",
+    "start:authorizationServer": "node ./dist/authorizationServer.js",
     "dev:client": "node -r esbuild-register ./src/client.ts",
+    "dev:authorizationServer": "node -r esbuild-register ./src/authorizationServer.ts",
     "lint": "eslint ./src/**/*.ts",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 0"
@@ -25,6 +27,7 @@
     "consolidate": "^1.0.4",
     "esbuild": "^0.24.2",
     "express": "^4.21.2",
+    "nosql": "^6.1.0",
     "qs": "^6.14.0",
     "randomstring": "^1.3.1",
     "sync-request": "^6.1.0",
