Send the user to the authorization server

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "start:client": "node ./dist/client.js",
     "start:authorizationServer": "node ./dist/authorizationServer.js",
     "start": "concurrently \"npm run start:client\" \"npm run start:authorizationServer\"",
-    "dev:client": "node -r esbuild-register ./src/client.ts",
-    "dev:authorizationServer": "node -r esbuild-register ./src/authorizationServer.ts",
+    "dev:client": "node -r esbuild-register ./src/client.ts --watch",
+    "dev:authorizationServer": "node -r esbuild-register ./src/authorizationServer.ts --watch",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:authorizationServer\"",
     "lint": "eslint ./src/**/*.ts",
     "type-check": "tsc --noEmit",
