--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "build": "esbuild ./src/*.ts --bundle --outdir=./dist/ --minify --sourcemap --platform=node --target=es2020",
     "start:client": "node ./dist/client.js",
     "start:authorizationServer": "node ./dist/authorizationServer.js",
-    "start": "concurrently \"npm run start:client\" \"npm run start:authorizationServer\"",
+    "start:protectedResource": "node ./dist/protectedResource.js",
+    "start": "concurrently \"npm run start:client\" \"npm run start:authorizationServer\" \"npm run start:protectedResource\"",
     "dev:client": "node -r esbuild-register ./src/client.ts --watch",
     "dev:authorizationServer": "node -r esbuild-register ./src/authorizationServer.ts --watch",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:authorizationServer\"",
+    "dev:protectedResource": "node -r esbuild-register ./src/protectedResource.ts --watch",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:authorizationServer\" \"npm run dev:protectedResource\"",
     "lint": "eslint ./src/**/*.ts",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
     "consolidate": "^1.0.4",
+    "cors": "^2.8.5",
     "esbuild": "^0.24.2",
     "express": "^4.21.2",
     "nosql": "^6.1.0",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/consolidate": "^0.14.4",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/randomstring": "^1.3.0",
     "@types/underscore": "^1.13.0",
