--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "start:authorizationServer": "node ./dist/authorizationServer.js",
     "start:protectedResource": "node ./dist/protectedResource.js",
     "start": "concurrently \"npm run start:client\" \"npm run start:authorizationServer\" \"npm run start:protectedResource\"",
-    "dev:client": "node -r esbuild-register ./src/client.ts --watch",
-    "dev:authorizationServer": "node -r esbuild-register ./src/authorizationServer.ts --watch",
-    "dev:protectedResource": "node -r esbuild-register ./src/protectedResource.ts --watch",
+    "dev:client": "node -r esbuild-register ./src/client.ts",
+    "dev:authorizationServer": "node -r esbuild-register ./src/authorizationServer.ts",
+    "dev:protectedResource": "node -r esbuild-register ./src/protectedResource.ts",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:authorizationServer\" \"npm run dev:protectedResource\"",
     "lint": "eslint ./src/**/*.ts",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "consolidate": "^1.0.4",
     "cors": "^2.8.5",
     "esbuild": "^0.24.2",
@@ -35,7 +36,6 @@
     "nosql": "^6.1.0",
     "qs": "^6.14.0",
     "randomstring": "^1.3.1",
-    "sync-request": "^6.1.0",
     "underscore": "^1.13.7",
     "underscore.string": "^3.3.6",
     "url": "^0.11.4"
